--- a/MazeGame/uml/uml.tex
+++ b/MazeGame/uml/uml.tex
@@ -36,7 +36,7 @@
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=\textwidth]{mazeeffectinterface}
-\caption{The MazeEffect Interface (Adaptor Pattern)}
+\caption{The MazeEffect Interface (Adapter Pattern)}
 \end{figure}
 
 
